|
Quick Lists
|
|
Bug ID:
|
6718283
|
|
Votes
|
0
|
|
Synopsis
|
existing uses of *_FORMAT_W() were broken by 6521491
|
|
Category
|
hotspot:garbage_collector
|
|
Reported Against
|
|
|
Release Fixed
|
hs14(b03)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
6521491
|
|
Submit Date
|
24-JUN-2008
|
|
Description
|
The fix for 6521491 moved the definitions of the *_FORMAT_W() macros to globalDefinitions.hpp, and changed the parameter type from a string-literal to an integer-literal. Existing uses of the macros were not updated after the parameter type change, causing silent breakage.
Posted Date : 2008-06-24 07:58:32.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
Description says it all. Fortunately, the existing uses of the macros were in debug-only code.
Posted Date : 2008-06-24 07:58:32.0
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/15dd2594d08e
Posted Date : 2008-07-12 02:05:24.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |