6718283: existing uses of *_FORMAT_W() were broken by 6521491

Reviewed-by: ysr, pbk